# hello

./: Cargo.toml  build.rs  ca-key.pem  ca.key  rootCA.pem  server.key  server.pem
certs/: ca.key  ca.pem  ca.srl  client.csr  client.key  client.pem  san.cnf  san_client.cnf  server.csr  server.key  server.pem
proto/: hello.proto
src/: client.rs  server.rs  shape.rs
